<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@id/toolbar">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout android:id="@+id/price_range_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp">

                <TextView android:id="@+id/price_label"
                    android:text="Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <EditText android:id="@+id/min_price_field"
                    android:inputType="numberDecimal"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/text_edit_border"
                    android:layout_marginLeft="15dp"/>

                <TextView android:id="@+id/to_label"
                    android:text="to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:layout_alignBaseline="@id/price_label"
                    android:layout_toRightOf="@id/price_label" />

                <EditText android:id="@+id/max_price_field"
                    android:inputType="numberDecimal"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/text_edit_border"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>

            <TextView android:id="@+id/owner_rating_label"
                android:text="Owner Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@+id/price_range_layout"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp" />

            <RatingBar android:id="@+id/owner_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="#FFCC00"
                android:secondaryProgressTint="#FFCC00"
                android:layout_below="@+id/owner_rating_label"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"/>

            <TextView android:id="@+id/and_up_label_1"
                android:text="&amp; up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignTop="@id/owner_rating_bar"
                android:layout_toRightOf="@id/owner_rating_bar"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"/>

            <TextView android:id="@+id/spot_rating_label"
                android:text="Spot Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@+id/owner_rating_bar"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp" />

            <RatingBar android:id="@+id/spot_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="#FFCC00"
                android:secondaryProgressTint="#FFCC00"
                android:layout_below="@+id/spot_rating_label"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"/>

            <TextView android:id="@+id/and_up_label_2"
                android:text="&amp; up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignTop="@id/spot_rating_bar"
                android:layout_toRightOf="@id/spot_rating_bar"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"/>

            <TextView android:id="@+id/handicap_only_label"
                android:text="Handicap Only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@+id/spot_rating_bar"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp" />

            <CheckBox android:id="@+id/handicap_only_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/handicap_only_label"
                android:layout_toRightOf="@id/handicap_only_label"
                android:layout_marginLeft="20dp"/>

            <TextView android:id="@+id/size_label"
                android:text="Size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@+id/handicap_only_label"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp" />


            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sizeSpinner"
                android:layout_alignBaseline="@+id/size_label"
                android:layout_alignBottom="@+id/size_label"
                android:layout_alignLeft="@+id/search_button"
                android:layout_alignStart="@+id/search_button" />

            <TextView
                android:text="*Smaller sizes include larger ones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size_label"
                android:layout_alignLeft="@+id/size_label"
                android:layout_alignStart="@+id/size_label"
                android:id="@+id/textView20"
                android:textSize="12sp" />

            <Button android:id="@+id/search_button"
                android:text="Search"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/sizeSpinner"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>