...
        tools:context="edu.usc.parknpay.seeker.SeekerMainActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar">

            <ViewSwitcher
                android:id="@+id/search_bar"
...
                        android:inputType="numberDecimal|numberSigned"
                        android:ems="10"
                        android:id="@+id/longEditText" />
                </LinearLayout>
            </ViewSwitcher>

            <ImageView android:id="@+id/filter_button"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/filter"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"/>
...
