...
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_below="@id/register_button"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="30dp">-->
        <!--<Button-->
            <!--android:text="SEEKER"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/SEEKER"-->
            <!--android:onClick="SeekerTestLogin"/>-->
        <!--<Button-->
            <!--android:text="HOST"-->
...
